// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findElement utils findElements should find elements 1`] = `
Array [
  Object {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
  Object {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
]
`;

exports[`findElement utils findElements should find elements with xpath 1`] = `
Array [
  Object {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
  Object {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
]
`;

exports[`getPrototype 1`] = `
Object {
  "acceptAlert": Object {
    "value": 52,
  },
  "addCookie": Object {
    "value": 45,
  },
  "back": Object {
    "value": 8,
  },
  "closeWindow": Object {
    "value": 13,
  },
  "createWindow": Object {
    "value": 15,
  },
  "deleteAllCookies": Object {
    "value": 46,
  },
  "deleteCookie": Object {
    "value": 48,
  },
  "deleteSession": Object {
    "value": 2,
  },
  "dismissAlert": Object {
    "value": 51,
  },
  "elementClear": Object {
    "value": 39,
  },
  "elementClick": Object {
    "value": 38,
  },
  "elementSendKeys": Object {
    "value": 40,
  },
  "executeAsyncScript": Object {
    "value": 43,
  },
  "executeScript": Object {
    "value": 42,
  },
  "findElement": Object {
    "value": 24,
  },
  "findElementFromElement": Object {
    "value": 26,
  },
  "findElements": Object {
    "value": 25,
  },
  "findElementsFromElement": Object {
    "value": 27,
  },
  "forward": Object {
    "value": 9,
  },
  "fullscreenWindow": Object {
    "value": 23,
  },
  "getActiveElement": Object {
    "value": 28,
  },
  "getAlertText": Object {
    "value": 53,
  },
  "getAllCookies": Object {
    "value": 44,
  },
  "getElementAttribute": Object {
    "value": 31,
  },
  "getElementCSSValue": Object {
    "value": 33,
  },
  "getElementProperty": Object {
    "value": 32,
  },
  "getElementRect": Object {
    "value": 36,
  },
  "getElementTagName": Object {
    "value": 35,
  },
  "getElementText": Object {
    "value": 34,
  },
  "getNamedCookie": Object {
    "value": 47,
  },
  "getPageSource": Object {
    "value": 41,
  },
  "getTimeouts": Object {
    "value": 4,
  },
  "getTitle": Object {
    "value": 11,
  },
  "getUrl": Object {
    "value": 6,
  },
  "getWindowHandle": Object {
    "value": 12,
  },
  "getWindowHandles": Object {
    "value": 16,
  },
  "getWindowRect": Object {
    "value": 19,
  },
  "isElementDisplayed": Object {
    "value": 30,
  },
  "isElementEnabled": Object {
    "value": 37,
  },
  "isElementSelected": Object {
    "value": 29,
  },
  "maximizeWindow": Object {
    "value": 21,
  },
  "minimizeWindow": Object {
    "value": 22,
  },
  "navigateTo": Object {
    "value": 7,
  },
  "newSession": Object {
    "value": 1,
  },
  "performActions": Object {
    "value": 49,
  },
  "refresh": Object {
    "value": 10,
  },
  "releaseActions": Object {
    "value": 50,
  },
  "sendAlertText": Object {
    "value": 54,
  },
  "setTimeouts": Object {
    "value": 5,
  },
  "setWindowRect": Object {
    "value": 20,
  },
  "status": Object {
    "value": 3,
  },
  "switchToFrame": Object {
    "value": 17,
  },
  "switchToParentFrame": Object {
    "value": 18,
  },
  "switchToWindow": Object {
    "value": 14,
  },
  "takeElementScreenshot": Object {
    "value": 56,
  },
  "takeScreenshot": Object {
    "value": 55,
  },
}
`;

exports[`transformExecuteResult multiple results 1`] = `
Array [
  Array [
    "foobar",
    "__executeElement",
    42,
  ],
  Object {
    "element-6066-11e4-a52e-4f735466cecf": "foobar",
  },
  Array [
    "foobar",
    "__executeElement",
    42,
  ],
]
`;

exports[`validate should do a proper request 1`] = `
Object {
  "elementId": "123",
  "using": "css selector",
  "value": "#body",
}
`;

exports[`validate should do a proper request with non required params 1`] = `
Object {
  "customParam": 123,
  "elementId": "123",
  "using": "css selector",
  "value": "#body",
}
`;
